bk_ida/gobmkida/g1/find_connection_moves
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/find_connection_moves/src/engine/readconnect.c:1067:48: error: use of undeclared identifier 'pdfa'
sprintf( buf, "Move order for %sconnect: %n", &pdfa.name[70], &chars); 
                                               ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/find_connection_moves/src/engine/readconnect.c:1527:8: error: use of undeclared identifier 'pdfa'
v55 = &pdfa.name[70]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/find_connection_moves/src/obj/1/readconnect.o] Error 1
